alb/legacy/clm-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clm-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:952133313117:certificate/4cf15da0-698b-43e8-ba3d-94d16fb66f99
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS


spec:
  rules:
    - host: clm.bwlab.de
      http:
        paths:
          - path: /*
            backend:
              serviceName: clm-np
              servicePort: 80
